them label mat khau

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <label for="">Username</label>
 <input type="txtUsername">
+<label for="">Mat khau</label>
+<input type="txtmatkhau">
 
 </html>
