sua label matkhau thanh password, txtmatkhau thanh txtpasswor, btn login

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <label for="">Username</label>
 <input type="txtUsername">
-<label for="">Mat khau</label>
-<input type="txtmatkhau">
+<label for="txtpassword">Password</label>
+<input type="txtpassword">
+<button>login</button>
 
 </html>
