--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<label for="">Username</label>
+<label for="">Ten dang nhap</label>
 <input type="txtUsername">
 <label for="">Mat khau</label>
 <input type="txtmatkhau">
