--- a/index.html
+++ b/index.html
@@ -6,10 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<label for="">Ten dang nhap</label>
-<input type="txtUsername">
-<label for="txtpassword">Password</label>
-<input type="txtpassword">
-<button>Đăng nhập</button>
+
+<body>
+    <label for="txtusername">Tên đăng nhập</label>
+    <input type="text" id="txtusername">
+    <label for="txtpassword">Mật khẩu</label>
+    <input type="password" id="txtpassword">
+    <button onclick="login()">Đăng nhập</button>
+
+    <script>
+        function login() {
+            var username = document.getElementById("txtusername").value;
+            var password = document.getElementById("txtpassword").value;
+
+            // Kiểm tra thông tin đăng nhập
+            if (username === "admin" && password === "admin") {
+                // Đăng nhập thành công, chuyển hướng đến trang khác
+                window.location.href = "login_success.html";
+            } else {
+                // Hiển thị thông báo lỗi nếu thông tin đăng nhập không đúng
+                alert("Tên đăng nhập hoặc mật khẩu không chính xác!");
+            }
+        }
+    </script>
+</body>
 
 </html>
+
